(rule
 (target cubeTexture_x11.ml)
 (action (write-file %{target} "include CubeTexture")))

(rule
 (target cubeTexture_wayland.ml)
 (action (write-file %{target} "include CubeTexture")))

(rule
 (target fragment_light.ml)
 (deps shaders/fragment_light.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target vertex_light.ml)
 (deps shaders/vertex_light.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(executable
 (name cubeTexture_x11)
 (public_name cubeTexture_x11)
 (modules cubeTexture_x11 cubeTexture fragment_light  vertex_light  )
 (flags (:standard -w -6))
 (libraries gles3 gles3-x11)
 (enabled_if (= %{env:BUILD_X11_EXAMPLES=} "true"))
 (package gles3))

(executable
 (name cubeTexture_wayland)
 (public_name cubeTexture_wayland)
 (modules cubeTexture_wayland cubeTexture fragment_light  vertex_light  )
 (flags (:standard -w -6))
 (libraries gles3 gles3-wayland)
 (enabled_if (= %{env:BUILD_WAYLAND_EXAMPLES=} "true"))
 (package gles3))
