(rule
 (target exploding_cube_x11.ml)
 (action (write-file %{target} "include Exploding_cube")))

(rule
 (target exploding_cube_wayland.ml)
 (action (write-file %{target} "include Exploding_cube")))

(rule
 (target fragment_light.ml)
 (deps shaders/fragment_light.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target geometry_shader.ml)
 (deps shaders/geometry_shader.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target vertex_light.ml)
 (deps shaders/vertex_light.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(executable
 (name exploding_cube_x11)
 (public_name exploding_cube_x11)
 (modules exploding_cube_x11 exploding_cube fragment_light  geometry_shader  vertex_light  )
 (flags (:standard -w -6))
 (libraries gles3 gles3-x11)
 (enabled_if (= %{env:BUILD_X11_EXAMPLES=} "true"))
 (package gles3))

(executable
 (name exploding_cube_wayland)
 (public_name exploding_cube_wayland)
 (modules exploding_cube_wayland exploding_cube fragment_light  geometry_shader  vertex_light  )
 (flags (:standard -w -6))
 (libraries gles3 gles3-wayland)
 (enabled_if (= %{env:BUILD_WAYLAND_EXAMPLES=} "true"))
 (package gles3))
