(executable
 (name spheres)
 (public_name spheres)
 (flags (:standard -w -6-27-50-33))
 (optional) ; only compiled if ancient is present.
 (libraries gles3 ancient))

(rule (action (with-stdout-to vertex_shadow.ml (run glsl_to_ml vertex_shadow.glsl))))
(rule (action (with-stdout-to fragment_shadow.ml (run glsl_to_ml fragment_shadow.glsl))))
(rule (action (with-stdout-to vertex_light_with_shadow.ml (run glsl_to_ml vertex_light_with_shadow.glsl))))
(rule (action (with-stdout-to fragment_light_with_shadow.ml (run glsl_to_ml fragment_light_with_shadow.glsl))))
(rule (action (with-stdout-to vertex_implicit_shadow.ml (run glsl_to_ml vertex_implicit_shadow.glsl))))
(rule (action (with-stdout-to sphere_shadow.ml (run glsl_to_ml sphere_shadow.glsl))))
(rule (action (with-stdout-to fragment_implicit_shadow.ml (run glsl_to_ml fragment_implicit_shadow.glsl))))
(rule (action (with-stdout-to sphere.ml (run glsl_to_ml sphere.glsl))))
(rule (action (with-stdout-to fragment_light_implicit_with_shadow.ml (run glsl_to_ml fragment_light_implicit_with_shadow.glsl))))
