(rule
 (target spheres_x11.ml)
 (action (write-file %{target} "include Spheres")))

(rule
 (target spheres_wayland.ml)
 (action (write-file %{target} "include Spheres")))

(rule
 (target fragment_implicit_shadow.ml)
 (deps shaders/fragment_implicit_shadow.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target fragment_light_implicit_with_shadow.ml)
 (deps shaders/fragment_light_implicit_with_shadow.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target fragment_light_with_shadow.ml)
 (deps shaders/fragment_light_with_shadow.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target fragment_shadow.ml)
 (deps shaders/fragment_shadow.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target sphere.ml)
 (deps shaders/sphere.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target sphere_shadow.ml)
 (deps shaders/sphere_shadow.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target vertex_implicit_shadow.ml)
 (deps shaders/vertex_implicit_shadow.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target vertex_light_with_shadow.ml)
 (deps shaders/vertex_light_with_shadow.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target vertex_shadow.ml)
 (deps shaders/vertex_shadow.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(executable
 (name spheres_x11)
 (public_name spheres_x11)
 (modules spheres_x11 spheres fragment_implicit_shadow  fragment_light_implicit_with_shadow  fragment_light_with_shadow  fragment_shadow  sphere  sphere_shadow  vertex_implicit_shadow  vertex_light_with_shadow  vertex_shadow  )
 (flags (:standard -w -6))
 (libraries gles3 gles3-x11)
 (enabled_if (= %{env:BUILD_X11_EXAMPLES=} "true"))
 (package gles3))

(executable
 (name spheres_wayland)
 (public_name spheres_wayland)
 (modules spheres_wayland spheres fragment_implicit_shadow  fragment_light_implicit_with_shadow  fragment_light_with_shadow  fragment_shadow  sphere  sphere_shadow  vertex_implicit_shadow  vertex_light_with_shadow  vertex_shadow  )
 (flags (:standard -w -6))
 (libraries gles3 gles3-wayland)
 (enabled_if (= %{env:BUILD_WAYLAND_EXAMPLES=} "true"))
 (package gles3))
