(executable
 (name testc)
 (public_name testc)
 (flags (:standard -w -6-27-50))
 (libraries gles3))

(rule
 (targets vertex_shadow.ml)
 (deps vertex_shadow.glsl)
 (action (with-stdout-to vertex_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat vertex_shadow.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets fragment_shadow.ml)
 (deps fragment_shadow.glsl)
 (action (with-stdout-to fragment_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat fragment_shadow.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets vertex_light_with_shadow.ml)
 (deps vertex_light_with_shadow.glsl)
 (action (with-stdout-to vertex_light_with_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat vertex_light_with_shadow.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets fragment_light_with_shadow.ml)
 (deps fragment_light_with_shadow.glsl)
 (action (with-stdout-to fragment_light_with_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat fragment_light_with_shadow.glsl)
    (echo "\"\n")
    ))))
