(executable
 (name testd)
 (public_name testd)
 (flags (:standard -w -6-27-50))
 (libraries gles3))

(rule
 (targets vertex_shadow.ml)
 (deps vertex_shadow.glsl)
 (action (with-stdout-to vertex_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat vertex_shadow.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets fragment_shadow.ml)
 (deps fragment_shadow.glsl)
 (action (with-stdout-to fragment_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat fragment_shadow.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets vertex_light_with_shadow.ml)
 (deps vertex_light_with_shadow.glsl)
 (action (with-stdout-to vertex_light_with_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat vertex_light_with_shadow.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets fragment_light_with_shadow.ml)
 (deps fragment_light_with_shadow.glsl)
 (action (with-stdout-to fragment_light_with_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat fragment_light_with_shadow.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets vertex_implicit_shadow.ml)
 (deps vertex_implicit_shadow.glsl)
 (action (with-stdout-to vertex_implicit_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat vertex_implicit_shadow.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets solve.ml)
 (deps solve.glsl)
 (action (with-stdout-to solve.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat solve.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets fragment_implicit_shadow.ml)
 (deps fragment_implicit_shadow.glsl)
 (action (with-stdout-to fragment_implicit_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat fragment_implicit_shadow.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets ellipsoid.ml)
 (deps ellipsoid.glsl)
 (action (with-stdout-to ellipsoid.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat ellipsoid.glsl)
    (echo "\"\n")
    ))))

(rule
 (targets fragment_light_implicit_with_shadow.ml)
 (deps fragment_light_implicit_with_shadow.glsl)
 (action (with-stdout-to fragment_light_implicit_with_shadow.ml (progn
    (echo "let str = String.trim \"") ; hack to remove newlight.
    (cat fragment_light_implicit_with_shadow.glsl)
    (echo "\"\n")
    ))))
