(executable
 (name testd)
 (public_name testd)
 (flags (:standard -w -6-27-50))
 (libraries gles3)
 (preprocess (per_module
   ((action (run glsl_to_ml %{input-file}))
   vertex_shadow vertex_light_with_shadow
   vertex_implicit_shadow
   fragment_shadow fragment_light_with_shadow
   fragment_implicit_shadow fragment_light_implicit_with_shadow
   ellipsoid solve )))
 )
