(rule
 (target windows_x11.ml)
 (action (write-file %{target} "include Windows")))

(rule
 (target windows_wayland.ml)
 (action (write-file %{target} "include Windows")))

(rule
 (target fragment_light.ml)
 (deps shaders/fragment_light.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(rule
 (target vertex_light.ml)
 (deps shaders/vertex_light.glsl)
 (action
  (with-stdout-to %{target}
   (run glsl_to_ml %{deps}))))

(executable
 (name windows_x11)
 (public_name windows_x11)
 (modules windows_x11 windows fragment_light  vertex_light  )
 (flags (:standard -w -6))
 (libraries gles3 gles3-x11)
 (enabled_if (= %{env:BUILD_X11_EXAMPLES=} "true"))
 (package gles3))

(executable
 (name windows_wayland)
 (public_name windows_wayland)
 (modules windows_wayland windows fragment_light  vertex_light  )
 (flags (:standard -w -6))
 (libraries gles3 gles3-wayland)
 (enabled_if (= %{env:BUILD_WAYLAND_EXAMPLES=} "true"))
 (package gles3))
